--- a/src/main/webapp/styles/css/default.css
+++ b/src/main/webapp/styles/css/default.css
@@ -85,6 +85,10 @@ body {
   margin-top: 0;
 }
  
+ .div-text-center{
+ text-align: center;
+vertical-align: middle;
+}
  
 /*
  * Placeholder dashboard ideas
@@ -104,4 +108,7 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+
+
+
  
